# I2-Lab-Copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/workflows/: ci.yml
apps/agent-service/: Dockerfile  pyproject.toml
apps/agent-service/src/i2_agent_service/: __init__.py  main.py  pipeline.py
apps/agent-service/tests/: test_pubsub_decode.py
apps/discord-bot/: Dockerfile  pyproject.toml
apps/discord-bot/src/i2_bot/: __init__.py  commands.py  main.py  recording.py
docs/: architecture.md  backlog.md  runbook.md
docs/adr/: 0001-record-architecture-decisions.md  0002-tech-stack.md  0003-swappable-storage-backend.md
infra/terraform/: README.md  apis.tf  iam.tf  main.tf  outputs.tf  resources.tf  terraform.tfvars.example  variables.tf  wif.tf
