[project]
name = "i2-lab-copilot"
version = "0.1.0"
description = "研修室専用 AI エージェント（Discord + GCP ADK）モノレポ"
requires-python = ">=3.13"
dependencies = [
    "i2-core",
    "i2-storage",
    "i2-integrations",
    "i2-agents",
    "i2-discord-bot",
    "i2-agent-service",
]

# ---- uv workspace ----
[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
i2-core = { workspace = true }
i2-storage = { workspace = true }
i2-integrations = { workspace = true }
i2-agents = { workspace = true }
i2-discord-bot = { workspace = true }
i2-agent-service = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pyright>=1.1.390",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pre-commit>=4",
]

# ---- Tooling (centralized) ----
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["packages", "apps"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]
# RUF001-003: 日本語コメント/文字列の全角記号を許容（ja コードベースのため）
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = [
    "i2_core",
    "i2_storage",
    "i2_integrations",
    "i2_agents",
    "i2_bot",
    "i2_agent_service",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["packages", "apps"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps"]
addopts = "-q"
