[project]
name = "i2-discord-bot"
version = "0.1.0"
description = "Discord bot（py-cord）: 録音・スラッシュコマンド I/O"
requires-python = ">=3.13"
dependencies = [
    "i2-core",
    "i2-storage",
    "py-cord[voice]>=2.6",
    "google-cloud-pubsub>=2.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/i2_bot"]

[tool.uv.sources]
i2-core = { workspace = true }
i2-storage = { workspace = true }
